# atech-seda-review

./: .gitignore  app.py  pyproject.toml  requirements.txt  review.py
.streamlit/: config.toml
findings_library/: common_findings.md
prompts/: bei_narrative.md  ground_rule_audit.md  output_schema.json  system_prompt.md
references/: gold_standard_grandis.docx  seda_checklist_v4_industrial.md
src/: auth.py  bei_extract.py  bei_narrative.py  bei_render.py  database.py  extract.py  ground_rule_pass.py  log.py  pdf_render.py  render.py  review_pass.py  verify.py
tests/: test_extract.py  test_verify.py
